kubernetes-files/create-kandula-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-deployment
spec:
  selector:
    matchLabels:
      app: kandula
  replicas: 1
  template:
    metadata:
      labels:
        app: kandula
    spec:
      containers:
      - name: kandula
        image: dzbeda/mid-project:7
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kandula-service
spec:
  selector:
    app: kandula
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 5000
