kubernetes-files/kandula-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-deployment
spec:
  selector:
    matchLabels:
      app: kandula
  replicas: 1
  template:
    metadata:
      labels:
        app: kandula
    spec:
      containers:
      - name: kandula
        image: dzbeda/mid-project:7
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kandula-service
spec:
  selector:
    app: kandula
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  labels:
    version: v3.0.22.fffff480
    task: Final-Project
    app: kandula
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: kandula
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "5000"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443, "HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/certificate-arn: <cert>
    #alb.ingress.kubernetes.io/tags: Owner=Galit Udovik,Task=Kandula,App_name=MPrj,CreatedBy=IngressYaml
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000,routing.http2.enabled=false
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
    ### kubernetes.io/tls-acme: "true"

spec:
  #ingressClassName: alb
  defaultBackend:
    service:
      name: kandula-service
      port:
        number: 80
  rules:
    - host: kandula.zbeda.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kandula-service
                port:
                  number: 80
