kubernetes-files/kandula-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-deployment
spec:
  selector:
    matchLabels:
      app: kandula
  replicas: 2
  template:
    metadata:
      labels:
        app: kandula
    spec:
      containers:
      - name: kandula
        image: dzbeda/mid-project:3
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kandula-service
spec:
  selector:
    app: kandula
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nlb.ingress.kubernetes.io/certificate-arn: arn:aws:elasticloadbalancing:us-east-1:748223565985:loadbalancer/net/af43ca06975e34d239fc434c2b873793/d16ec4d8413e5f09:certificate/arn:aws:acm:us-east-1:748223565985:certificate/cebdbfc2-07c9-4832-a696-fae951f3156e 
spec:
  rules:
  - host: kandula.zbeda.site
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kandula-service
                port:
                  number: 80
  tls:
    - hosts:
      - kandula.zbeda.site
