kubernetes-files/monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  labels:
    version: v3.0.22.fffff480
    task: Final-Project
    app: kandula
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: kandula
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "5000"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443, "HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/certificate-arn: <cert>
    #alb.ingress.kubernetes.io/tags: Owner=Galit Udovik,Task=Kandula,App_name=MPrj,CreatedBy=IngressYaml
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000,routing.http2.enabled=false
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
    ### kubernetes.io/tls-acme: "true"

spec:
  #ingressClassName: alb
  defaultBackend:
    service:
      name: prometheus-grafana
      port:
        number: 80
  rules:
    - host: kandula.zbeda.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
